[package]
name = "nv-flip-sys"
version = "0.1.0"
authors = ["the gfx-rs developers"]
edition = "2021"
description = "FFI bindings to Nvidia Labs's ꟻLIP image comparison and error visualization library"
readme = "../README.md"
repository = "https://github.com/gfx-rs/nv-flip-rs"
license = "(MIT OR Apache-2.0 OR Zlib) AND BSD-3-Clause"
links = "nv-flip"
include = [
    "src/",
    "extern/cpp/common/pooling.h",
    "extern/cpp/common/mapMagma.h",
    "extern/cpp/common/sharedflip.h",
    "extern/cpp/common/stb_image.h",
    "extern/cpp/common/stb_image_write.h",
    "extern/cpp/common/tinyexr.h",
    "extern/cpp/CPP/color.h",
    "extern/cpp/CPP/image.h",
    "extern/cpp/CPP/tensor.h",
    "build.rs"
]

[dependencies]

[dev-dependencies]
nv-flip = { path = "../nv-flip" }
image = { version = "0.24", default-features = false, features = ["png"]}

[build-dependencies]
cc = "1"
